testsuite/tests/typecheck/should_fail/T15523.hs
{-# LANGUAGE StrictData #-}

module T15523 where

newtype Duration = Foo
data Literal = LitDuration Duration
